# multi_cam_rig_cpp

./: CMakeLists.txt  package.xml
calibration/: firefly_left.yaml  firefly_right.yaml  ximea.yaml
calibration/zed_left_to_zed_right_calibration/: left.yaml  ost.txt  right.yaml
calibration_files/: firefly_left.yaml  firefly_right.yaml  ximea.yaml  zed_left.yaml  zed_right.yaml
config/: firefly.yaml
include/multi_cam_rig_cpp/: director_gui.hpp  firefly_capture_node.hpp  ximea_capture_node.hpp  zed_capture_node.hpp
install/: local_setup.sh  setup.sh
install/multi_cam_rig_cpp/lib/multi_cam_rig_cpp/: bag_to_images.py  calibration_node.py  director_gui  firefly_capture_node  ximea_capture_node  zed_capture_node
install/multi_cam_rig_cpp/share/ament_index/resource_index/package_run_dependencies/: multi_cam_rig_cpp
install/multi_cam_rig_cpp/share/ament_index/resource_index/parent_prefix_path/: multi_cam_rig_cpp
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/calibration/: firefly_left.yaml  firefly_right.yaml
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/cmake/: multi_cam_rig_cppConfig-version.cmake  multi_cam_rig_cppConfig.cmake
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/config/: firefly.yaml  zed2i.yaml
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/multi_cam_rig_cpp/share/multi_cam_rig_cpp/launch/: camera_calibration.launch.py  firefly_synchronized.launch.py  multi_cam_rig.launch.py
launch/: camera_calibration.launch.py  firefly_synchronized.launch.py  multi_cam_rig.launch.py
log/: latest_build
scripts/: bag_to_images.py  calibration.py  calibration_node.py  compare_rect.py  depth.py  planar_homography.py  realtime_demosaic.py  unpack_bag.py  zed_testing.py
src/: director_gui.cpp  firefly_capture_node.cpp  ximea_capture_node.cpp  zed_capture_node.cpp
